--- a/pipe/namedpipe/makefile
+++ b/pipe/namedpipe/makefile
@@ -1,10 +1,10 @@
 .PHONY:all
-all:
-	server client
+all:server client
 server:server.cc component.hpp
-	g++ -o $@ $^ -std=c11
+	g++ -o $@ $^ -std=c++11
 client:client.cc component.hpp
-	g++ -o $@ $^ -std=c11
+	g++ -o $@ $^ -std=c++11
 .PHONY:clean
+clean:
 	rm -rf server client
 
