udpate pipe/namedPipe

--- a/pipe/namedpipe/makefile
+++ b/pipe/namedpipe/makefile
@@ -6,5 +6,5 @@ client:client.cc component.hpp
 	g++ -o $@ $^ -std=c++11
 .PHONY:clean
 clean:
-	rm -rf server client
+	rm -rf server client namedPipe
 
