add client2 in shm

--- a/shm/makefile
+++ b/shm/makefile
@@ -1,8 +1,11 @@
-all:server client
+.PHONY:all
+all:server client1 client2
 server:server.cc common.hpp
 	g++ -o $@ $^ -std=c++11
-client:client.cc common.hpp
+client1:client1.cc common.hpp
+	g++ -o $@ $^ -std=c++11
+client2:client2.cc common.hpp
 	g++ -o $@ $^ -std=c++11
 .PHONY:clean
 clean:
-	rm -rf server client
+	rm -rf server client1 client2
